syntax = "proto3";
option go_package = "pb/";
package ukama.rates.v1;
service RatesService {
    rpc GetRates (RatesRequest) returns (RatesResponse) {}
    rpc GetRate(RateRequest) returns (RateResponse){}
}
message RatesRequest{
    string country = 1;
    optional string provider =2;
    optional int32 to  =3;
    optional  int32 from  =4;
}
message RatesResponse {
    repeated Rate rates = 1;
}
message RateResponse{
    Rate rate =1;
}
message RateRequest{
    string rateId =1;
}
message Rate{
    int32 id =1;
    string country=2;
    string network = 3;
    string vpmn =4;
    string imsi=5;
    string sms_mo=6;
    string sms_mt =7;
    string data =8;
    string  _2g=9;
    string _3g=10;
    string _5g=11;
    string lte=12; 
    string lte_m=13;
    string apn=14; 
    string created_at=15;
    string effective_at=16;
    string end_at=17;
}