syntax = "proto3";

option go_package = "pb/gen";

package ukama.dataPlan.v1;


service RatesService {
    rpc UploadRates(UploadRatesRequest) returns (UploadRatesResponse);
}


message UploadRatesRequest {
    string fileUrl = 1;
    string effectiveAt = 2;
}

message UploadRatesResponse {
    repeated Rate rate = 1;
}

message Rate {
    int32 id = 1;
    string country = 2;
    string country_on_cronus = 3;
    string network = 4;
    string network_id_on_cronus = 5;
    string vpmn = 6;
    string imsi = 7;
    string sms_mo = 8;
    string sms_mt = 9;
    string data = 10;
    string _2g = 11;
    string _3g = 12;
    string lte = 13;
    string lte_m = 14;
    string apn = 15;
    string created_at = 16;
    string effective_at = 17;
    string end_at = 18;
}